--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/components/card/card.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/components/card/card.component.html
@@ -7,40 +7,50 @@
             <span class="sr-only">Loading...</span>
         </div>
     </div>
-    <form class="mb-3" [formGroup]="loginForm">
-        <div class="card-body">
-            <div class="row" @fadeAnimation class="text-danger p-2" *ngIf="error"><i
-                    class="fas fa-exclamation-circle pr-1 text-danger"></i> {{error}}</div>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">@</span>
+    <div *ngIf="!token">
+        <form class="mb-3" [formGroup]="loginForm">
+            <div class="card-body">
+                <div class="row" @fadeAnimation class="text-danger p-2" *ngIf="error"><i
+                        class="fas fa-exclamation-circle pr-1 text-danger"></i> {{error}}</div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">@</span>
+                    </div>
+                    <input formControlName="username" type="text" class="form-control" placeholder="User Name"
+                        [ngClass]="{ 'is-invalid': f.username.errors && (loginForm.controls['username'].touched || submitted)}">
+                    <div *ngIf="f.username.errors" class="invalid-feedback ml-3">
+                        <div *ngIf="f.username.errors.required">User Name is required</div>
+                    </div>
                 </div>
-                <input formControlName="username" type="text" class="form-control" placeholder="User Name"
-                    [ngClass]="{ 'is-invalid': f.username.errors && (loginForm.controls['username'].touched || submitted)}">
-                <div *ngIf="f.username.errors" class="invalid-feedback ml-3">
-                    <div *ngIf="f.username.errors.required">User Name is required</div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-key"></i></span>
+                    </div>
+                    <input formControlName="password" type="password" autocomplete="password" class="form-control"
+                        placeholder="Password"
+                        [ngClass]="{ 'is-invalid': f.password.errors && (loginForm.controls['password'].touched || submitted)}">
+                    <div *ngIf="f.password.errors" class="invalid-feedback ml-3">
+                        <div *ngIf="f.password.errors.required">Password is required</div>
+                    </div>
                 </div>
             </div>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fas fa-key"></i></span>
+            <div class="card-body p-0">
+                <div class="row justify-content-center">
+                    <button type="button" [disabled]="loading" class="btn btn-primary" (click)="onSubmit()">Log
+                        In</button>
                 </div>
-                <input formControlName="password" type="password" autocomplete="password" class="form-control"
-                    placeholder="Password"
-                    [ngClass]="{ 'is-invalid': f.password.errors && (loginForm.controls['password'].touched || submitted)}">
-                <div *ngIf="f.password.errors" class="invalid-feedback ml-3">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
+                <div class="row justify-content-center">
+                    <button class="btn btn-link" type="button" (click)="swichToTegistration()">Create Account</button>
                 </div>
             </div>
+        </form>
+    </div>
+    <div *ngIf="token">
+        <div class="row justify-content-center">
+            <h4>Redirect back to service</h4>
         </div>
-        <div class="card-body p-0">
-            <div class="row justify-content-center">
-                <button type="button" [disabled]="loading" class="btn btn-primary" (click)="onSubmit()">Log
-                    In</button>
-            </div>
-            <div class="row justify-content-center">
-                <button class="btn btn-link" type="button" (click)="swichToTegistration()">Create Account</button>
-            </div>
-        </div>
-    </form>
+        <form ngNoForm #redirectForm name="redirectForm" method="POST" action="{{serviceUrl}}">
+            <input name="AuthorizationCode" value="{{token}}" hidden>
+        </form>
+    </div>
 </div>
