--- a/TestIntegrationApplication/Views/Home/SuccessLogin.cshtml
+++ b/TestIntegrationApplication/Views/Home/SuccessLogin.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "SuccessLogin";
 }
-
+<h4>@ViewData["IdToken"]</h4>
 <h1>SuccessLogin</h1>
+<a  href='@Url.Action("User","Test")'>test</a>
 
